tests/parser/parse-body.3.bad.error
error: Malformed body expression
  --> test:6:4
   |
 6 |      (let x = 5 . 5)
   |      ^^^^^^^^^^^^^^^ unexpected dotted list
